deps/crates/vendor/pin-project-lite/tests/ui/pin_project/invalid.stderr
error: no rules expected `(`
 --> tests/ui/pin_project/invalid.rs:7:14
  |
7 |         #[pin()] //~ ERROR no rules expected the token `(`
  |              ^ no rules expected this token in macro call
  |
note: while trying to match `]`
 --> src/lib.rs
  |
  |                 $(#[$pin:ident])?
  |                               ^

error: no rules expected `(`
 --> tests/ui/pin_project/invalid.rs:7:14
  |
7 |         #[pin()] //~ ERROR no rules expected the token `(`
  |              ^ no rules expected this token in macro call
  |
note: while trying to match `]`
 --> src/lib.rs
  |
  |                 $(#[$pin:ident])?
  |                               ^

error: no rules expected `#`
  --> tests/ui/pin_project/invalid.rs:22:9
   |
22 |         #[pin] //~ ERROR no rules expected the token `#`
   |         ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$field_vis:vis`
  --> src/lib.rs
   |
   |                 $field_vis:vis $field:ident: $field_ty:ty
   |                 ^^^^^^^^^^^^^^

error: no rules expected `#`
  --> tests/ui/pin_project/invalid.rs:22:9
   |
22 |         #[pin] //~ ERROR no rules expected the token `#`
   |         ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$field_vis:vis`
  --> src/lib.rs
   |
   |                 $field_vis:vis $field:ident: $field_ty:ty
   |                 ^^^^^^^^^^^^^^
